--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-portfolio-template",
+  "homepage":"https://github.com/chefia777/Next.JS-Portfolio",
   "version": "3.0",
   "private": true,
   "scripts": {
